# gr-running_agregate_func

./: CMakeLists.txt  MANIFEST.md
cmake/Modules/: running_agregate_funcConfig.cmake
docs/: README.running_agregate_func
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
include/running_agregate_func/: CMakeLists.txt  api.h
lib/: CMakeLists.txt  qa_running_agregate_func.cc  qa_running_agregate_func.h  test_running_agregate_func.cc
python/: CMakeLists.txt  __init__.py
swig/: CMakeLists.txt  running_agregate_func_swig.i
